Add community book corner APIs
